<resources>

    <string name="app_name">Mercados Inclusivos</string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_registro_password">Registro_password</string>
    <string name="title_activity_pantalla__inicial">Pantalla_Inicial</string>
    <string name="title_activity_formulario_papa1">formulario_papa1</string>
    <string name="title_activity_formulario_papa2">formulario_papa2</string>
    <string name="title_activity_formulario_quinua1">formulario_quinua1</string>
    <string name="title_activity_formulario_haba1">formulario_haba1</string>
    <string name="title_activity_formulario_durazno1">formulario_durazno1</string>

    <!--Página de login-->
    <string name="hint_id">Carnet Identidad</string>
    <string name="hint_contraseña">*********</string>
    <string name="id">Id:</string>
    <string name="constraseña">Contraseña:</string>
    <string name="olvidado">Olvidó su contraseña?:</string>


    <!--Página de registro de usuario-->

    <string name="reg_title">Registro de usuario:</string>
    <string name="reg_ci">Carnet de identidad:</string>
    <string name="reg_name">Nombre:</string>
    <string name="reg_lastname1">Primer apellido:</string>
    <string name="reg_lastname2">Segundo apellido:</string>
    <string name="reg_birthdate">Fecha de nacimiento:</string>
    <string name="reg_state">Estado civil:</string>
    <string name="reg_gender">Género:</string>
    <string name="reg_locate">Departamento:</string>
    <string name="reg_email">Correo:</string>
    <string name="reg_phone">Teléfono:</string>
    <string name="reg_entry">Rubro principal:</string>
    <string name="reg_password">Ingresar contraseña:</string>
    <string name="reg_password2">Vuelva a ingresar contraseña:</string>

    <!--Hints de formulario de registro-->

    <string name="reg_hint_ci">4870689</string>
    <string name="reg_hint_name">Juan</string>
    <string name="reg_hint_lastname1">Perez:</string>
    <string name="reg_hint_lastname2">Perez</string>
    <string name="reg_hint_date">05/11/1964</string>
    <string name="reg_hint_email">juanperez@gmail.com</string>
    <string name="reg_hint_phone">70629182</string>
    <string name="reg_hint_password">*******</string>
    <string name="reg_hint_password2">*******</string>

    <!--Combo box de estados civiles-->
    <string name="state">Escoja una opción:</string>
    <string-array name="states">
        <item>Soltero</item>
        <item>Casado</item>
        <item>Viudo</item>
        <item>Divorciado</item>
    </string-array>

    <!--Combo box de géneros-->
    <string name="gender">Escoja un género:</string>
    <string-array name="genders">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

    <!--Combo box de rubros-->
    <string name="entry">Escoja un rubro:</string>
    <string-array name="entries">
        <item>Papa</item>
        <item>Haba</item>
        <item>Quinua</item>
        <item>Durazno</item>
        <item>Hortalizas</item>
    </string-array>

    <!--Botones de registro/pantalla de registro-->
    <string name="button_continue">Continuar</string>
    <string name="button_save">Guardar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="select_id">ID:</string>
    <string name="select_password">Seleccionar contraseña</string>
    <string name="select_password2">Volver a ingresar contraseña</string>



    <!--++++++++++VARIEDADES+++++++++++++++++++++++++++++++++++++++++++++++++++++-->

    <!--Combo box de variedades Papa-->
    <string name="variety_potatoe">Escoja una variedad:</string>
    <string-array name="varieties_potatoes">
        <item>Huaycha</item>
        <item>Negra</item>
        <item>Khati</item>
    </string-array>

    <!--Combo box de variedades Haba-->
    <string name="variety_bean">Escoja una variedad:</string>
    <string-array name="varieties_beans">
        <item>Chilcani</item>
        <item>Turista</item>
        <item>Samasa</item>
    </string-array>

    <!--Combo box de variedades Durazno-->
    <string name="variety_peach">Escoja una variedad:</string>
    <string-array name="varieties_peaches">
        <item>Gumucio</item>
        <item>Reyes</item>
        <item>Ulicante</item>
        <item>Perchicos</item>
    </string-array>

    <!--Combo box de variedades Quinua-->
    <string name="variety_quinoa">Escoja una variedad:</string>
    <string-array name="varieties_quinoas">
        <item>Blanca</item>
        <item>Pandela</item>
        <item>Kellu</item>
    </string-array>

    <!--++++++++++TIPOS+++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->

    <!--Combo box de tipos de Papa-->
    <string name="type_potatoe">Escoja un tipo:</string>
    <string-array name="types_potatoes">
        <item>Normal</item>
        <item>Chuño Tunta</item>
    </string-array>

    <!--Combo box de variedades Haba-->
    <string name="type_bean">Escoja un tipo:</string>
    <string-array name="types__beans">
        <item>Seca</item>
        <item>Envainada</item>
    </string-array>

    <!--Combo box de variedades Durazno-->
    <string name="type_peach">Escoja un tipo:</string>
    <string-array name="types_peaches">
        <item>Fresco</item>
        <item>Transformado</item>
    </string-array>

    <!--Combo box de variedades Quinoa-->
    <string name="type_quinoa">Escoja un tipo:</string>
    <string-array name="types_quinoas">
        <item>Local</item>
        <item>Exportación</item>
    </string-array>

    <!--++++++++++MUNICIPIOS+++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
    <!--Combo box de Municipios de Papa-->
    <string name="municipality_potatoe">Escoja unun municipio:</string>
    <string-array name="municipalities_potatoes">
        <item>Viacha</item>
        <item>Patacamaya</item>
        <item>Corocoro</item>
        <item>Sicasica</item>
        <item>Umala</item>
    </string-array>

    <!--Combo box de Municipios Haba-->
    <string name="municipality_bean">Escoja unun municipio:</string>
    <string-array name="municipalities_beans">
        <item>Chaki</item>
        <item>Puma</item>
    </string-array>

    <!--Combo box de Municipios Durazno-->
    <string name="municipality_peach">Escoja un municipio:</string>
    <string-array name="municipalities_peaches">
        <item>Luribay</item>
        <item>Sapahaqui</item>
        <item>Palca</item>
    </string-array>

    <!--Combo box de Municipios Quinoa-->
    <string name="municipality_quinoa">Escoja un municipio:</string>
    <string-array name="municipalities_quinoas">
        <item>Challapata</item>
        <item>Santiago de Huari</item>
    </string-array>


    <!--Pantalla de formularios-->
    <string name="form_variety">  1.Variedad:</string>
    <string name="form_cycle">2.Ciclo:</string>
    <string name="form_municipality">3.Municipio:</string>
    <string name="form_surface">4.Superficie:</string>
    <string name="form_irrigation">5.Riego:</string>
    <string name="form_type">6.Tipo:</string>
    <string name="form_sale">7.Tipo de venta:</string>
    <string name="form_qualification">8.Calificación del año agrícola:</string>


    <string-array name="cycles">
        <item>2017-2018</item>
        <item>2018-2019</item>
        <item>2019-2020</item>
        <item>2020-2021</item>
    </string-array>
    <string-array name="surfaces">
        <item>Hectáreas</item>
        <item>Metros Cuadrados</item>
    </string-array>
    <string-array name="irrigation">
        <item>Si</item>
        <item>No</item>
    </string-array>
    <string-array name="sale_type">
        <item>Detallista</item>
        <item>Acopiador</item>
    </string-array>
    <string-array name="qualification">
        <item>Bueno</item>
        <item>Regular</item>
        <item>Malo</item>
    </string-array>
    <string-array name="unity">
        <item>Arroba</item>
        <item>Quintal</item>
    </string-array>


    <!--Matriz de productos-->
    <string name="quality">Calidad</string>
    <string name="volume">Total Volumen Cosechado</string>
    <string name="sell_volume">Volumen destinado a ventas</string>
    <string name="price">Precio</string>
    <string name="quality1">1ra</string>
    <string name="quality2">2da</string>
    <string name="quality3">3ra</string>
    <string name="quality4">4ta</string>
    <string name="quality5">Descarte</string>


</resources>


