<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_title"/>

        <View
            android:layout_height="2dip"
            android:background="#FF909090"
            android:layout_width="match_parent"
            android:layout_marginBottom="30dp"/>
        />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:stretchColumns="1"
            >

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/reg_ci"
                    android:padding="3dip"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/reg_name"
                    android:gravity="center"
                    android:padding="3dip"/>
            </TableRow>
            <TableRow>
                <EditText
                    android:layout_width="wrap_content"
                    android:hint="@string/reg_hint_ci"
                    android:padding="3dip"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:hint="@string/reg_hint_name"
                    android:gravity="center"
                    android:padding="3dip"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/reg_lastname1"
                    android:padding="3dip"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/reg_lastname2"
                    android:gravity="center"
                    android:padding="3dip"/>
            </TableRow>
            <TableRow>
                <EditText
                    android:layout_width="wrap_content"
                    android:hint="@string/reg_hint_lastname1"
                    android:padding="3dip"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:hint="@string/reg_hint_lastname2"
                    android:gravity="center"
                    android:padding="3dip"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/reg_date"
                    android:padding="3dip"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/reg_state"
                    android:gravity="center"
                    android:padding="3dip"/>
            </TableRow>
            <TableRow>
                <DatePicker
                    android:layout_width="20dp"
                    android:padding="3dip"
                    />
                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:entries="@array/states"
                    android:prompt="@string/state" />
            </TableRow>



        </TableLayout>

    </LinearLayout>


</ScrollView>
