<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="false"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_title"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textColor="@color/link" />

            <View
                android:layout_height="2dip"
                android:background="#FF909090"
                android:layout_width="match_parent"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:text="@string/select_id"
                android:layout_gravity="center" />

            <EditText
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:hint="@string/reg_hint_ci"
                android:layout_gravity="center"
                android:layout_margin="20dp" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:text="@string/select_password"
                android:layout_gravity="center"
                android:padding="3dip"/>

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:password="true"
                android:hint="@string/reg_hint_password"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:inputType="textPassword"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:text="@string/select_password2"
                android:layout_gravity="center"
                android:padding="3dip"/>

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:password="true"
                android:hint="@string/reg_hint_password2"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:inputType="textPassword"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/regpass_botonContinuar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/button_save"
                    android:layout_margin="20dp"
                    android:textColor="@color/blanco"
                    android:background="@color/link" />

                <Button
                    android:id="@+id/regpass_botonCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/button_cancel"
                    android:layout_margin="20dp"
                    android:textColor="@color/blanco"
                    android:background="@color/colorAccent"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</ScrollView>