<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_marginLeft="5dp"
            android:text="Formulario Papa:"
            android:textSize="25dp"
            android:textColor="@color/link"
            />


        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

        </LinearLayout>

        <TableRow
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/form_variety"
                android:textAllCaps="true"
                android:textColor="@color/negro"/>

            <Spinner
                android:layout_width="match_parent"
                android:entries="@array/varieties_potatoes"
                android:prompt="@string/variety_potatoe" />

        </TableRow>

        <TableRow
            android:layout_margin="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/form_cycle"
                android:textAllCaps="true"
                android:textColor="@color/negro"/>

            <Spinner
                android:layout_width="match_parent"
                android:entries="@array/cycles" />

        </TableRow>

        <TableRow android:layout_margin="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/form_municipality"
                android:textAllCaps="true"
                android:textColor="@color/negro" />

            <Spinner
                android:layout_width="match_parent"
                android:entries="@array/municipalities_potatoes"
                android:prompt="@string/municipality_potatoe" />

        </TableRow>

        <TableRow
            android:layout_margin="20dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_surface"
                    android:textAllCaps="true"
                    android:textColor="@color/negro"/>

                <EditText
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:numeric="integer"
                    android:inputType="number"/>


            </LinearLayout>

            <Spinner
                android:layout_width="match_parent"
                android:entries="@array/surfaces" />

        </TableRow>

        <TableRow
            android:layout_margin="20dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_irrigation"
                    android:textAllCaps="true"
                    android:textColor="@color/negro"/>


            </LinearLayout>

            <Spinner
                android:layout_width="match_parent"
                android:entries="@array/irrigation" />

        </TableRow>

        <TableRow
            android:layout_margin="20dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_type"
                    android:textAllCaps="true"
                    android:textColor="@color/negro"/>

            </LinearLayout>

            <Spinner
                android:layout_width="match_parent"
                android:entries="@array/types_potatoes" />

        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/regpass_botonContinuar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_continue"
                android:layout_margin="20dp"
                android:textColor="@color/blanco"
                android:background="@color/link" />

            <Button
                android:id="@+id/regpass_botonCancelar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_cancel"
                android:layout_margin="20dp"
                android:textColor="@color/blanco"
                android:background="@color/colorAccent"/>
        </LinearLayout>





    </TableLayout>

</ScrollView>